[gd_scene load_steps=3 format=3 uid="uid://cccn4mrilxa6b"]

[ext_resource type="Script" uid="uid://edj2wa7lp5e6" path="res://UI/Menu/animation_controller/animation_controller.gd" id="1_qd5y0"]
[ext_resource type="PackedScene" uid="uid://dhqh33b3682gc" path="res://UI/Menu/animation_controller/animation_line/animation_line.tscn" id="2_iv26q"]

[node name="AnimationController" type="TabContainer"]
custom_minimum_size = Vector2(425, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
current_tab = 0
script = ExtResource("1_qd5y0")

[node name="Animation Preview" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Animation Preview"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Animation Preview/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="Animation Preview/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test Options"

[node name="AnimationPlayMode" type="OptionButton" parent="Animation Preview/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Current Direction"
popup/item_0/id = 0
popup/item_1/text = "Eight Directions"
popup/item_1/id = 1
popup/item_2/text = "Sixteen Directions"
popup/item_2/id = 2

[node name="Title" type="HBoxContainer" parent="Animation Preview/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Animation Preview/VBoxContainer/Title"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Animation Preview/VBoxContainer/Title/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Animation Name"

[node name="VSeparator" type="VSeparator" parent="Animation Preview/VBoxContainer/Title"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Animation Preview/VBoxContainer/Title"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Animation Preview/VBoxContainer/Title/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Actions
"

[node name="HSeparator" type="HSeparator" parent="Animation Preview/VBoxContainer"]
layout_mode = 2

[node name="AnimationList" type="VBoxContainer" parent="Animation Preview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer3" parent="Animation Preview/VBoxContainer/AnimationList" instance=ExtResource("2_iv26q")]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="Animation Preview/VBoxContainer/AnimationList"]
layout_mode = 2

[node name="HBoxContainer4" parent="Animation Preview/VBoxContainer/AnimationList" instance=ExtResource("2_iv26q")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Animation Preview/VBoxContainer/AnimationList"]
layout_mode = 2

[node name="HBoxContainer5" parent="Animation Preview/VBoxContainer/AnimationList" instance=ExtResource("2_iv26q")]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Animation Preview/VBoxContainer/AnimationList"]
layout_mode = 2

[node name="AnimationTree" type="CenterContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="item_selected" from="Animation Preview/VBoxContainer/HBoxContainer/AnimationPlayMode" to="." method="_on_option_button_item_selected"]
